puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Integrations/content/Controllers/IntegrationsController.cs.pp
using System.Web.Mvc;

namespace $rootnamespace$.Controllers
{
    public partial class IntegrationsController : Controller
    {
        //
        // GET: /Integrations/

        public ActionResult Index()
        {
            return View();
        }

        public ActionResult Facebook()
        {
            return View();
        }

    }
}
